finished adding properties to Food.cs and UserProfile.cs

--- a/FirebaseMVC/Views/Home/Index.cshtml
+++ b/FirebaseMVC/Views/Home/Index.cshtml
@@ -4,6 +4,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <h2 class="dislay-4">Your email address is @Model.Email, but you probably knew that.</h2>
+    <h1 class="display-4">Welcome To Fork To Fit!</h1>
+    <h2 class="dislay-4">Your Health Is An Investment, Not An Expense.</h2>
 </div>
