created an Edit view for meal plan

--- a/FirebaseMVC/Views/Shared/_Layout.cshtml
+++ b/FirebaseMVC/Views/Shared/_Layout.cshtml
@@ -21,6 +21,12 @@
                         @if (User.Identity.IsAuthenticated)
                         {
 
+
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="MealPlan" asp-action="Index">Meal Plans</a>
+                            </li>
+
+
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="DisplayedFood" asp-action="Index">Food Selections</a>
                             </li>
