--- a/FirebaseMVC/Views/MealPlan/Index.cshtml
+++ b/FirebaseMVC/Views/MealPlan/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<ForkToFit.Repositories.MealPlanRepository>
+﻿@model IEnumerable<ForkToFit.Repositories.MealPlan>
 
 @{
     ViewData["Title"] = "Meal Plans";
 }
 
-<h1>Index</h1>
+<h1>Meal Plans</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -12,6 +12,21 @@
 <table class="table">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Id)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.UserProfileId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.MealPlanTypeId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CalorieTracker)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -19,9 +34,24 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.UserProfileId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.MealPlanTypeId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CalorieTracker)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { item.Id }) |
+                @Html.ActionLink("Details", "Details", new { item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { item.Id })
             </td>
         </tr>
 }
