added the functionality to create a meal plan

--- a/FirebaseMVC/Views/MealPlan/Index.cshtml
+++ b/FirebaseMVC/Views/MealPlan/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ForkToFit.Repositories.MealPlan>
+﻿@model IEnumerable<ForkToFit.Models.MealPlan>
 
 @{
     ViewData["Title"] = "Meal Plans";
