--- a/FirebaseMVC/Views/MealPlan/Create.cshtml
+++ b/FirebaseMVC/Views/MealPlan/Create.cshtml
@@ -1,41 +1,43 @@
-﻿@model ForkToFit.Repositories.MealPlan
+﻿@model ForkToFit.Models.ViewModels.MealPlanFormViewModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create A Meal Plan";
 }
 
-<h1>Create</h1>
+<h1>Create A New Meal Plan</h1>
 
-<h4>MealPlan</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+     
             <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
+                <label asp-for="MealPlan.Name" class="control-label"></label>
+                <input asp-for="MealPlan.Name" class="form-control" />
+                <span asp-validation-for="MealPlan.Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="UserProfileId" class="control-label"></label>
                 <input asp-for="UserProfileId" class="form-control" />
                 <span asp-validation-for="UserProfileId" class="text-danger"></span>
+            </div>*@
+            <div class="form-group">
+                <label asp-for="MealPlan.MealPlanTypeId" class="control-label">Meal Plan Type</label>
+                <select asp-for="MealPlan.MealPlanTypeId" class="form-control">
+                    <option value="">Select Meal Plan Type</option>
+                    @foreach (MealPlanType mealPlanType in Model.MealPlanTypes)
+                    {
+                        <option value="@mealPlanType.Id">@mealPlanType.Name</option>
+                    }
+                </select>
+                <span asp-validation-for="MealPlan.MealPlanTypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MealPlanTypeId" class="control-label"></label>
-                <input asp-for="MealPlanTypeId" class="form-control" />
-                <span asp-validation-for="MealPlanTypeId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CalorieTracker" class="control-label"></label>
-                <input asp-for="CalorieTracker" class="form-control" />
-                <span asp-validation-for="CalorieTracker" class="text-danger"></span>
+                <label asp-for="MealPlan.CalorieTracker" class="control-label"></label>
+                <input asp-for="MealPlan.CalorieTracker" class="form-control" />
+                <span asp-validation-for="MealPlan.CalorieTracker" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -45,7 +47,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back To List</a>
 </div>
 
 @section Scripts {
