--- a/FirebaseMVC/Views/MealPlan/Edit.cshtml
+++ b/FirebaseMVC/Views/MealPlan/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ForkToFit.Models.MealPlan
 
 @{
-    ViewData["Title"] = "Edit Meal Plan";
+    ViewData["Title"] = "Edit Your Meal Plan";
 }
 
 <h1>Edit Meal Plan</h1>
