editing a meal plan

--- a/FirebaseMVC/Views/MealPlan/Index.cshtml
+++ b/FirebaseMVC/Views/MealPlan/Index.cshtml
@@ -13,16 +13,17 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Id)
+                @*@Html.DisplayNameFor(model => model.Id)*@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.UserProfileId)
+                @*@Html.DisplayNameFor(model => model.UserProfileId)*@
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MealPlanTypeId)
+                @*@Html.DisplayNameFor(model => model.MealPlanTypeId)*@
+                Meal Plan Type
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.CalorieTracker)
@@ -34,17 +35,18 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Id)
+                @*@Html.DisplayFor(modelItem => item.Id)*@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.UserProfileId)
+                @*@Html.DisplayFor(modelItem => item.UserProfileId)*@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.MealPlanTypeId)
             </td>
+          
             <td>
                 @Html.DisplayFor(modelItem => item.CalorieTracker)
             </td>
