--- a/FirebaseMVC/Views/Home/Index.cshtml
+++ b/FirebaseMVC/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <h1 class="display-4">Welcome To Fork To Fit!</h1>
     <h2 class="dislay-4">Your Health Is An Investment, Not An Expense.</h2>
     <p>
-        Hello! My name is Luke Madrazo and here are some quick information for you! All foods are divided up
+        Here are some quick information for you! All foods are divided up
         into a combination of these 3 macronutrients and that's how the calorie
         content is made up of. Protein and carbs are four calories per gram, and fat is nine calories per gram.
         It's all about calories in versus calories out. Through your diet you need to be burning more calories
