--- a/FirebaseMVC/Views/MealPlan/Delete.cshtml
+++ b/FirebaseMVC/Views/MealPlan/Delete.cshtml
@@ -1,16 +1,45 @@
-﻿@model ForkToFit.Repositories.MealPlanRepository
+﻿@model ForkToFit.Models.MealPlan
 
 @{
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this Meal Plan?</h3>
+<h3>Are you sure you want to delete this meal plan?</h3>
 <div>
-    <h4>MealPlanRepository</h4>
+  
     <hr />
     <dl class="row">
+        @*<dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Id)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Id)
+        </dd>
+        <dt class = "col-sm-2">*@
+        @*<dt class=" = col-sm-2">
+            @Html.DisplayNameFor(model => model.Name)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Name)
+        </dd>*@
+        @*<dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.UserProfileId)
+        </dt>*@
+        @*<dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.UserProfileId)
+        </dd>*@
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.MealPlanType.Name)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.MealPlanType.Name)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.CalorieTracker)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.CalorieTracker)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
