--- a/FirebaseMVC/Views/MealPlan/Edit.cshtml
+++ b/FirebaseMVC/Views/MealPlan/Edit.cshtml
@@ -12,26 +12,26 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="Id" class="control-label"></label>
                 <input asp-for="Id" class="form-control" />
                 <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="UserProfileId" class="control-label"></label>
                 <input asp-for="UserProfileId" class="form-control" />
                 <span asp-validation-for="UserProfileId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="MealPlanTypeId" class="control-label"></label>
-                <input asp-for="MealPlanTypeId" class="form-control" />
+            </div>*@
+            @*<div class="form-group">
+                <label asp-for="MealPlan.Name" class="control-label"></label>
+                <input asp-for="MealPlan" class="form-control" />
                 <span asp-validation-for="MealPlanTypeId" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="CalorieTracker" class="control-label"></label>
                 <input asp-for="CalorieTracker" class="form-control" />
