added css to meal plan details and home view

--- a/FirebaseMVC/Views/Home/Index.cshtml
+++ b/FirebaseMVC/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
 <div class="text-center">
     <h1 class="display-4">Welcome To Fork To Fit!</h1>
     <h2 class="dislay-4">Your Health Is An Investment, Not An Expense.</h2>
+    <div class="text-center container mt-5">
     <p>
         Here are some quick information for you! All foods are divided up
         into a combination of these 3 macronutrients and that's how the calorie
@@ -14,4 +15,10 @@
         than what you are consuming to lose weight. On the contrary, if your goal is to get bigger then you would need
         to eat more calories than what you are burning!
     </p>
+    </div>
+    <br />
+    <p>If you want to loose weight in a gradual state, then be in a caloric deficit of 300 calories, but if you want to go on a faster
+    pace, then I suggest being in a 500 caloric deficit. On the other hand, being on a 300 caloric surplus will gradually help you put 
+    on weight, but if you want to bulk up faster then I suggest being on 500 caloric surplus. Another tip is to cook your food with 0 calorie
+    sprays, low sodium and low sugar condiments or spices!</p>
 </div>
