--- a/FirebaseMVC/Views/MealPlan/Index.cshtml
+++ b/FirebaseMVC/Views/MealPlan/Index.cshtml
@@ -7,9 +7,9 @@
 <h1>Meal Plans</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table table-striped">
     <thead>
         <tr>
         
