--- a/FirebaseMVC/Views/Shared/_Layout.cshtml
+++ b/FirebaseMVC/Views/Shared/_Layout.cshtml
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - FirebaseMVC</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body>
+<body class="parallax">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-info border-bottom box-shadow mb-3">
             <div class="container">
@@ -23,7 +26,7 @@
 
 
                             <li class="nav-item">
-                                <a class="nav-link text-break" asp-area="" asp-controller="MealPlan" asp-action="Index">Meal Plans</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="MealPlan" asp-action="Index">Meal Plans</a>
                             </li>
 
 
