--- a/FirebaseMVC/Views/MealPlan/Edit.cshtml
+++ b/FirebaseMVC/Views/MealPlan/Edit.cshtml
@@ -12,16 +12,21 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-      
+
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-       
             <div class="form-group">
-                <label asp-for="MealPlanTypeId" class="control-label"></label>
-                <input asp-for="MealPlanTypeId" class="form-control" />
+                <label asp-for="MealPlanType.Name" class="control-label">Meal Plan Type</label>
+                <select asp-for="MealPlanType.Name" class="form-control">
+                    <option value="">Select Meal Plan Type</option>
+                    @foreach (MealPlanType mealPlanType in Model.MealPlanTypes)
+                    {
+                        <option value="@mealPlanType.Id">@mealPlanType.Name</option>
+                    }
+                </select>
                 <span asp-validation-for="MealPlanTypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
