--- a/FirebaseMVC/Views/MealPlan/Index.cshtml
+++ b/FirebaseMVC/Views/MealPlan/Index.cshtml
@@ -36,7 +36,7 @@
             </td>
            
             <td>
-                @Html.DisplayFor(modelItem => item.MealPlanTypeId)
+                @Html.DisplayFor(modelItem => item.MealPlanType.Name)
             </td>
           
             <td>
