--- a/FirebaseMVC/Views/MealPlan/Edit.cshtml
+++ b/FirebaseMVC/Views/MealPlan/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model ForkToFit.Models.MealPlan
+﻿@model ForkToFit.Models.ViewModels.EditMealPlanFormViewModel
 
 @{
     ViewData["Title"] = "Edit Your Meal Plan";
@@ -14,25 +14,25 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <label asp-for="MealPlan.Name" class="control-label"></label>
+                <input asp-for="MealPlan.Name" class="form-control" />
+                <span asp-validation-for="MealPlan.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MealPlanType.Name" class="control-label">Meal Plan Type</label>
-                <select asp-for="MealPlanType.Name" class="form-control">
+                <label asp-for="MealPlan.MealPlanType" class="control-label">Meal Plan Type</label>
+                <select asp-for="MealPlan.MealPlanTypeId" class="form-control">
                     <option value="">Select Meal Plan Type</option>
                     @foreach (MealPlanType mealPlanType in Model.MealPlanTypes)
                     {
                         <option value="@mealPlanType.Id">@mealPlanType.Name</option>
                     }
                 </select>
-                <span asp-validation-for="MealPlanTypeId" class="text-danger"></span>
+                <span asp-validation-for="MealPlan.MealPlanTypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CalorieTracker" class="control-label"></label>
-                <input asp-for="CalorieTracker" class="form-control" />
-                <span asp-validation-for="CalorieTracker" class="text-danger"></span>
+                <label asp-for="MealPlan.CalorieTracker" class="control-label"></label>
+                <input asp-for="MealPlan.CalorieTracker" class="form-control" />
+                <span asp-validation-for="MealPlan.CalorieTracker" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
