--- a/FirebaseMVC/Views/MealPlan/Index.cshtml
+++ b/FirebaseMVC/Views/MealPlan/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<ForkToFit.Models.MealPlan>
+@*@model ForkToFit.Models.ViewModels.MealPlanListViewModel*@
 
 @{
     ViewData["Title"] = "Meal Plans";
@@ -7,7 +8,7 @@
 <h1>Meal Plans</h1>
 
 <p>
-    <a class="btn btn-primary" asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Create New Meal Plan</a>
 </p>
 <table class="table table-striped">
     <thead>
@@ -40,7 +41,7 @@
             </td>
           
             <td>
-                @Html.DisplayFor(modelItem => item.CalorieTracker)
+               @Html.DisplayFor(modelItem => item.CalorieTracker)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { item.Id }) |
