--- a/FirebaseMVC/Views/MealPlan/Details.cshtml
+++ b/FirebaseMVC/Views/MealPlan/Details.cshtml
@@ -13,38 +13,39 @@
 
     @foreach (var item in Model)
     {
-            <dt class="col-sm-2">
+            @*<dt class="col-sm-2">
                 @Html.DisplayNameFor(modelItem => item.Id)
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(modelItem => item.Id)
-            </dd>
+            </dd>*@
             <dt class="col-sm-2">
                 @Html.DisplayNameFor(modelItem => item.MealPlanId)
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(modelItem => item.MealPlanId)
             </dd>
-            <dt class="col-sm-2">
+            @*<dt class="col-sm-2">
                 @Html.DisplayNameFor(modelItem => item.DayCategoryId)
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(modelItem => item.DayCategoryId)
-            </dd>
-            <dt class="col-sm-2">
+            </dd>*@
+            @*<dt class="col-sm-2">
                 @Html.DisplayNameFor(modelItem => item.MealTimeId)
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(modelItem => item.MealTimeId)
-            </dd>
-            <dt class="col-sm-2">
+            </dd>*@
+            @*<dt class="col-sm-2">
                 @Html.DisplayNameFor(modelItem => item.DisplayedFoodId)
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(modelItem => item.DisplayedFoodId)
-            </dd>
+            </dd>*@
             <dt class="col-sm-2">
-                @Html.DisplayNameFor(modelItem => item.Name)
+                @*@Html.DisplayNameFor(modelItem => item.Name)*@
+                Food Name
             </dt>
             <dd class="col-sm-10">
                 @Html.DisplayFor(modelItem => item.Name)
