final mvp review

--- a/FirebaseMVC/Views/Home/Index.cshtml
+++ b/FirebaseMVC/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
     </p>
     </div>
     <br />
-    <p>If you want to loose weight in a gradual state, then be in a caloric deficit of 300 calories, but if you want to go on a faster
+    <p>You can make yourself a breakfast, lunch or dinner meal time but please include a single carb, fat and protein source for each meal! If you want to loose weight in a gradual state, then be in a caloric deficit of 300 calories, but if you want to go on a faster
     pace, then I suggest being in a 500 caloric deficit. On the other hand, being on a 300 caloric surplus will gradually help you put 
     on weight, but if you want to bulk up faster then I suggest being on 500 caloric surplus. Another tip is to cook your food with 0 calorie
     sprays, low sodium and low sugar condiments or spices!</p>
