--- a/FirebaseMVC/wwwroot/css/site.css
+++ b/FirebaseMVC/wwwroot/css/site.css
@@ -8,6 +8,11 @@ a.navbar-brand {
     font-family: 'Kalam', cursive;
 }
 
+
+
+
+
+
 * {
     font-family: 'Kalam', cursive;
 }
@@ -26,7 +31,7 @@ a {
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-    color: #fff;
+    color: #ff0000;
     background-color: #1b6ec2;
     border-color: #1861ac;
     font-family: 'Kalam', cursive;
@@ -86,14 +91,18 @@ body {
 
 
 
-.parallax {
+/*.parallax {*/
     /*background image*/
-    background-image: url('https://images.creativemarket.com/0.1.0/ps/5912337/1820/1213/m1/fpnw/wm1/tq3dpzrfpjdhuzk9yqb2zgsq446ssnplh9b8fzsbeo1oemh6ec5kkpp6gamxff7e-.jpg?1550561650&s=5c8e2e797d2405585e6676d70d42229f');
+    /*background-image: url('https://images.creativemarket.com/0.1.0/ps/5912337/1820/1213/m1/fpnw/wm1/tq3dpzrfpjdhuzk9yqb2zgsq446ssnplh9b8fzsbeo1oemh6ec5kkpp6gamxff7e-.jpg?1550561650&s=5c8e2e797d2405585e6676d70d42229f');*/
     /* full height*/
-    height: 100%;
+    /*height: 100%;*/
     /*center and scale image*/
-    background-attachment: fixed;
+    /*background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-}
+}*/
+
+
+
+
