--- a/FirebaseMVC/Views/MealPlan/Details.cshtml
+++ b/FirebaseMVC/Views/MealPlan/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ForkToFit.Models.FoodSelected>
+﻿@model ForkToFit.Models.ViewModels.DayCategoryFoodSelectedViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -11,86 +11,71 @@
     <hr />
     <dl class="row">
 
-    @foreach (var item in Model)
-    {
-            @*<dt class="col-sm-2">
-                @Html.DisplayNameFor(modelItem => item.Id)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(modelItem => item.Id)
-            </dd>*@
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(modelItem => item.MealPlanId)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(modelItem => item.MealPlanId)
-            </dd>
-            @*<dt class="col-sm-2">
-                @Html.DisplayNameFor(modelItem => item.DayCategoryId)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(modelItem => item.DayCategoryId)
-            </dd>*@
-            @*<dt class="col-sm-2">
-                @Html.DisplayNameFor(modelItem => item.MealTimeId)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(modelItem => item.MealTimeId)
-            </dd>*@
-            @*<dt class="col-sm-2">
-                @Html.DisplayNameFor(modelItem => item.DisplayedFoodId)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(modelItem => item.DisplayedFoodId)
-            </dd>*@
-            <dt class="col-sm-2">
-                @*@Html.DisplayNameFor(modelItem => item.Name)*@
-                Food Name
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(modelItem => item.Name)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(modelItem => item.ServingSize)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(modelItem => item.ServingSize)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(modelItem => item.Calories)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(modelItem => item.Calories)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(modelItem => item.Description)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(modelItem => item.Description)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(modelItem => item.MacroCategoryId)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(modelItem => item.MacroCategoryId)
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(modelItem => item.ImageUrl)
-            </dt>
-            <dd class="col-sm-10">
-                <img src="@item.ImageUrl" alt="Food Selected" />
-            </dd>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(modelItem => item.MacronutrientCategoryName)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(modelItem => item.MacronutrientCategoryName)
-            </dd>
-            <div>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                <a asp-action="Index">Back to List</a>
-            </div>
-        }
-    </dl>
+        <select>
+            @foreach (var day in Model.ListOfDays)
+            {
+
+                <option>@day.Name</option>
+
+            }
+        </select>
+
+            @foreach (var item in Model.MealPlanFoods)
+            {
+                <dt class="col-sm-2">
+                    @*@Html.DisplayNameFor(modelItem => item.MealPlanId)*@
+                </dt>
+                <dd class="col-sm-10">
+                    @*@Html.DisplayFor(modelItem => item.MealPlanId)*@
+                </dd>
+                <dt class="col-sm-2">
+                    @*@Html.DisplayNameFor(modelItem => item.Name)*@
+                    Food Name
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(modelItem => item.Name)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(modelItem => item.ServingSize)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(modelItem => item.ServingSize)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(modelItem => item.Calories)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(modelItem => item.Calories)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(modelItem => item.Description)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(modelItem => item.Description)
+                </dd>
+                <dt class="col-sm-2">
+                    @*@Html.DisplayNameFor(modelItem => item.MacroCategoryId)*@
+                </dt>
+                <dd class="col-sm-10">
+                    @*@Html.DisplayFor(modelItem => item.MacroCategoryId)*@
+                </dd>
+                @*<dt class="col-sm-2">
+                    @Html.DisplayNameFor(modelItem => item.ImageUrl)
+                </dt>*@
+                <dd class="col-sm-10">
+                    <img class="allImages" src="@item.ImageUrl" alt="Food Selected" />
+                </dd>
+                <dt class="col-sm-2">
+                    @*@Html.DisplayNameFor(modelItem => item.MacronutrientCategoryName)*@
+                </dt>
+                <dd class="col-sm-10">
+                    @*@Html.DisplayFor(modelItem => item.MacronutrientCategoryName)*@
+                </dd>
+                <div>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    <a asp-action="Index">Back to List</a>
+                </div>
+            }
+        </dl>
 </div>
 
