--- a/FirebaseMVC/Views/MealPlan/Details.cshtml
+++ b/FirebaseMVC/Views/MealPlan/Details.cshtml
@@ -7,75 +7,20 @@
 <h1>Details</h1>
 
 <div>
-    <h4>FoodSelected</h4>
+    
     <hr />
     <dl class="row">
-
-        <select>
-            @foreach (var day in Model.ListOfDays)
-            {
-
-                <option>@day.Name</option>
-
-            }
-        </select>
-
-            @foreach (var item in Model.MealPlanFoods)
-            {
-                <dt class="col-sm-2">
-                    @*@Html.DisplayNameFor(modelItem => item.MealPlanId)*@
-                </dt>
-                <dd class="col-sm-10">
-                    @*@Html.DisplayFor(modelItem => item.MealPlanId)*@
-                </dd>
-                <dt class="col-sm-2">
-                    @*@Html.DisplayNameFor(modelItem => item.Name)*@
-                    Food Name
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(modelItem => item.Name)
-                </dd>
-                <dt class="col-sm-2">
-                    @Html.DisplayNameFor(modelItem => item.ServingSize)
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(modelItem => item.ServingSize)
-                </dd>
-                <dt class="col-sm-2">
-                    @Html.DisplayNameFor(modelItem => item.Calories)
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(modelItem => item.Calories)
-                </dd>
-                <dt class="col-sm-2">
-                    @Html.DisplayNameFor(modelItem => item.Description)
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(modelItem => item.Description)
-                </dd>
-                <dt class="col-sm-2">
-                    @*@Html.DisplayNameFor(modelItem => item.MacroCategoryId)*@
-                </dt>
-                <dd class="col-sm-10">
-                    @*@Html.DisplayFor(modelItem => item.MacroCategoryId)*@
-                </dd>
-                @*<dt class="col-sm-2">
-                    @Html.DisplayNameFor(modelItem => item.ImageUrl)
-                </dt>*@
-                <dd class="col-sm-10">
-                    <img class="allImages" src="@item.ImageUrl" alt="Food Selected" />
-                </dd>
-                <dt class="col-sm-2">
-                    @*@Html.DisplayNameFor(modelItem => item.MacronutrientCategoryName)*@
-                </dt>
-                <dd class="col-sm-10">
-                    @*@Html.DisplayFor(modelItem => item.MacronutrientCategoryName)*@
-                </dd>
-                <div>
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    <a asp-action="Index">Back to List</a>
-                </div>
-            }
-        </dl>
+        <form asp-controller="MealPlan" asp-action="DisplayFoods">
+            <input asp-for="MealPlanId" value="@Model.MealPlanId" hidden />
+            <select asp-for="DaySelectedId">
+                @foreach (var day in Model.ListOfDays)
+                {
+                    <option value="@day.Id">@day.Name</option>
+                }
+            </select>
+            <button type="submit">Choose Day</button>
+        </form>
+    </dl>
+    <a asp-action="Index">Back to List</a>
 </div>
 
