added css to capstone

--- a/FirebaseMVC/Views/Home/Index.cshtml
+++ b/FirebaseMVC/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <h2 class="dislay-4">Your Health Is An Investment, Not An Expense.</h2>
     <div class="text-center container mt-5">
         <p>
-            Create a meal plan first and then add foods that you would like to include in your diet. In the food selections there will be a list of proteins, carbs and fats to choose from. You can make yourself a breakfast, lunch or dinner meal time but include a single carb, fat and protein source for each meal! If you want to loose weight in a gradual state, then be in a caloric deficit of 300 calories, but if you want to go on a faster
+            Create a meal plan first then add foods that you would like to include in your diet. In the food selections there will be a list of proteins, carbs and fats to choose from. You can make yourself a breakfast, lunch or dinner meal time but include a single carb, fat and protein source for each meal! If you want to loose weight in a gradual state, then be in a caloric deficit of 300 calories, but if you want to go on a faster
             pace, then I suggest being in a 500 caloric deficit. On the other hand, being on a 300 caloric surplus will gradually help you put
             on weight, but if you want to bulk up faster then I suggest being on 500 caloric surplus. My last tip is to cook your food with a zero calorie
             spray, low sodium, low sugar condiments and spices!
