added stretch goal of a user calculating their bmr

--- a/FirebaseMVC/Views/DisplayedFood/Index.cshtml
+++ b/FirebaseMVC/Views/DisplayedFood/Index.cshtml
@@ -33,7 +33,7 @@
             </th>
             <th>
                 @*@Html.DisplayNameFor(model => model.MacroCategoryId)*@
-                Macronutrient Category Name
+                Macronutrient Name
             </th>
             <th>
                 @*@Html.DisplayNameFor(model => model.ImageUrl)*@
