--- a/FirebaseMVC/Views/Home/Index.cshtml
+++ b/FirebaseMVC/Views/Home/Index.cshtml
@@ -7,10 +7,21 @@
     <h1 class="display-4">Welcome To Fork To Fit!</h1>
     <h2 class="dislay-4">Your Health Is An Investment, Not An Expense.</h2>
     <div class="text-center container mt-5">
+
+
+        <form asp-action="DisplayBmrForm">
+            <div>
+                <h3>Bmr Info</h3>
+                @Model.BmrInfo calories <br />
+                <button type="submit">Calculate Bmr</button>
+            </div>
+        </form>
+
+        <br />
         <p>
-            Create a meal plan first then add foods that you would like to include in your diet. In the food selections there will be a list of proteins, carbs and fats to choose from. You can make yourself a breakfast, lunch or dinner meal time but include a single carb, fat and protein source for each meal! If you want to loose weight in a gradual state, then be in a caloric deficit of 300 calories, but if you want to go on a faster
-            pace, then I suggest being in a 500 caloric deficit. On the other hand, being on a 300 caloric surplus will gradually help you put
-            on weight, but if you want to bulk up faster then I suggest being on 500 caloric surplus. My last tip is to cook your food with a zero calorie
+            Create a meal plan first then add foods that you would like to include in your diet. In the food selections there will be a list of proteins, carbs and fats to choose from. You can make yourself a breakfast, lunch or dinner meal time but include a single carb, fat and protein source for each meal! If you want to loose weight in a gradual state, then be in a caloric deficit of 100-300 calories, but if you want to go on a faster
+            pace, then I suggest being in a 400-500 caloric deficit. On the other hand, being on a 100-300 caloric surplus will gradually help you put
+            on weight, but if you want to bulk up faster then I suggest being on 400-500 caloric surplus. My last tip is to cook your food with a zero calorie
             spray, low sodium, low sugar condiments and spices!
         </p>
     </div>
