added stretch goal to be able to calculate bmr

--- a/FirebaseMVC/Views/DisplayedFood/Index.cshtml
+++ b/FirebaseMVC/Views/DisplayedFood/Index.cshtml
@@ -57,6 +57,7 @@
             <tr>
                 <div class="form-group">
                     <input asp-for="FoodSelected.DisplayedFoodId" value="@item.Id" class="control-label" hidden />
+                    <input asp-for="FoodCalories" value="@item.Calories" class="control-label" hidden />
                 </div>
 
                 <td>
