--- a/FirebaseMVC/Views/MealPlan/DisplayFoods.cshtml
+++ b/FirebaseMVC/Views/MealPlan/DisplayFoods.cshtml
@@ -56,6 +56,7 @@
             <dd class="col-sm-10">
                 <img class="allImages" src="@food.ImageUrl" alt="Food Selected" />
             </dd>
+            @Html.ActionLink("Remove Food", "RemoveFoodFromMealPlan", new { foodId = food.Id, mealTimeId = food.MealTimeId, mealPlanId = food.MealPlanId, foodCalories = food.Calories })
         }
 
     </dl>
